@@ -2,6 +2,7 @@
 	* client/gtk/resource-table.c, client/gtk/resource-table.h,
 	client/gtk/Makefile.am: Added a simple way to add a selection for
 	resources in the client.
+	* client/gtk/frontend.c: Reenabled the workaround for a Gtk+ bug.
 
 2004-11-28  0.8.1.44  Roland Clobus <rclobus@bigfoot.com>
 	* client/gtk/gui.h: Fix for the macro that would have bad side effects
